🚑️  💄 Fix z-index positioning of circles that block menu click on mobile

--- a/pages/landing/style.css
+++ b/pages/landing/style.css
@@ -499,7 +499,7 @@ body {
     position: absolute;
     top: -8%;
     right: 0%;
-    z-index: 2;
+    z-index: -1;
     opacity: 0.5;
   }
 
@@ -507,7 +507,7 @@ body {
     position: absolute;
     top: 30%;
     left: 0%;
-    z-index: 2;
+    z-index: -1;
     opacity: 0.5;
   }
 
@@ -515,7 +515,7 @@ body {
     position: absolute;
     top: 70%;
     left: 0%;
-    z-index: 2;
+    z-index: -1;
     opacity: 0.5;
   }
 }
